--- a/build.gradle
+++ b/build.gradle
@@ -43,6 +43,8 @@ ext {
 
 dependencies {
 	compile('org.springframework.cloud:spring-cloud-starter-config')
+    compile('org.springframework.boot:spring-boot-starter-actuator')
+    compile('org.springframework.boot:spring-boot-starter-web')
 	testCompile('org.springframework.boot:spring-boot-starter-test')
 }
 
