--- a/src/main/resources/bootstrap.yml
+++ b/src/main/resources/bootstrap.yml
@@ -7,8 +7,9 @@ spring:
     config:
       uri: 'http://wlswin.tie.local:9091'
 
-
-management.endpoints.web.exposure.include: refresh
+management:
+  endpoints.web.exposure.include: refresh,logfile
+  endpoint.logfile.external-file: '${TIEOS}/logs/${spring.application.name}/${spring.application.name}.log'
 
 logging:
   file:
