--- a/src/main/resources/bootstrap.yml
+++ b/src/main/resources/bootstrap.yml
@@ -2,7 +2,7 @@ spring:
   application:
     name: template
   profiles:
-    active: test
+    active: dev
   cloud:
     config:
       uri: 'http://wlswin.tie.local:9091'
