--- a/src/main/resources/bootstrap.yml
+++ b/src/main/resources/bootstrap.yml
@@ -1,4 +1,4 @@
-# GLOBAL BLOCK, DO NOT CHANGE #
+### DO NOT CHANGE THIS FILE ###
 spring:
   application:
     name: template
@@ -20,7 +20,3 @@ tie:
 management:
   endpoints.web.exposure.include: '*'
   endpoint.logfile.external-file: '${tie.logging.location}/${tie.logging.filename}'
-# END GLOBAL BLOCK #
-
-# define your own config below, this part will be needed for the config server
-# you can overwrite global values by redefining them
