--- a/build.gradle
+++ b/build.gradle
@@ -35,6 +35,7 @@ sourceCompatibility = 1.8
 repositories {
     mavenCentral()
     maven { url "https://repo.spring.io/milestone" }
+    maven { url "https://oss.sonatype.org/content/repositories/snapshots/" }
 }
 
 ext {
@@ -43,6 +44,7 @@ ext {
 
 dependencies {
     compile('org.springframework.cloud:spring-cloud-starter-config')
+    compile('de.codecentric:spring-boot-admin-starter-client:2.0.0-SNAPSHOT')
     compile('org.springframework.boot:spring-boot-starter-actuator')
     compile('org.springframework.boot:spring-boot-starter-web')
     testCompile('org.springframework.boot:spring-boot-starter-test')
