switch to jcenter

--- a/build.gradle
+++ b/build.gradle
@@ -14,7 +14,7 @@ buildscript {
                 ivy "[organisation]/[module]/ivys/ivy-[revision].xml"
             }
         }
-        mavenCentral()
+        jcenter()
     }
     dependencies {
         classpath("org.springframework.boot:spring-boot-gradle-plugin:${springBootVersion}")
@@ -33,7 +33,7 @@ version = '0.0.1-SNAPSHOT'
 sourceCompatibility = 1.8
 
 repositories {
-    mavenCentral()
+    jcenter()
     maven { url "https://repo.spring.io/milestone" }
     maven { url "https://oss.sonatype.org/content/repositories/snapshots/" }
 }
